--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -9,7 +9,7 @@ Type=forking
 ExecStart=/usr/bin/emacs --daemon=hecatemacs
 ExecStop=/usr/bin/emacsclient --eval "(progn (setq kill-emacs-hook 'nil) (kill-emacs))"
 Environment=SHELL=/bin/fish
-Environment=SSH_AUTH_SOCK=%t/keyring/ssh
+Environment=SSH_AUTH_SOCK=%t/ssh-agent.socket
 Environment=GPG_AGENT_INFO=%t/gnupg/S.gpg-agent:0:1
 Environment=GOPATH=%h/workbench/go
 Restart=on-failure
