Move environment variables to Fish

--- a/x/.xsessionrc
+++ b/x/.xsessionrc
@@ -3,10 +3,7 @@ if [ -d "$HOME/.local/bin" ]; then
     PATH="$HOME/.local/bin:$PATH"
 fi
 
-export EDITOR=~/.local/bin/et
-export VISUAL=~/.local/bin/em
 export TERMINAL=~/.local/bin/st
 export TERM=st-256color
-export SHELL=/bin/fish
 
-systemctl --user import-environment DISPLAY PATH EDITOR VISUAL TERMINAL TERM SHELL
+systemctl --user import-environment DISPLAY PATH TERMINAL TERM
