--- a/x/.xsessionrc
+++ b/x/.xsessionrc
@@ -5,5 +5,12 @@ fi
 
 export TERMINAL=~/.local/bin/st
 export TERM=st-256color
+export GTK_IM_MODULE=ibus
+export QT_IM_MODULE=ibus
+export XMODIFIERS=@im=ibus
 
-systemctl --user import-environment DISPLAY PATH TERMINAL TERM
+systemctl --user import-environment DISPLAY PATH TERMINAL TERM GTK_IM_MODULE QT_IM_MODULE XMODIFIERS
+
+
+
+
