--- a/config/.config/systemd/user/i3lock.service
+++ b/config/.config/systemd/user/i3lock.service
@@ -7,4 +7,4 @@ Environment=DISPLAY=:0
 ExecStart=/usr/bin/xautolock -time 3 -locker /usr/bin/i3lock-fancy -detectsleep
 
 [Install]
-WantedBy=graphical-session.target
+WantedBy=default.target
