--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -265,7 +265,7 @@ mode "$mode_system" {
 bindsym $mod+Delete mode "$mode_system"
 
 # Autolock (handled as systemd service instead)
-# exec --no-startup-id xautolock -locker i3lock-fancy -nowlocker i3lock-fancy -time 3 &
+exec --no-startup-id xautolock -locker i3lock-fancy -nowlocker i3lock-fancy -time 3 &
 
 # Keyboard shenanigans
 exec_always --no-startup-id ibus-daemon -rxR
