--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:InconsolataGo NF 11
+font pango:InconsolataGo NF 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -244,7 +244,7 @@ bindsym --release Shift+Print exec scrot -s 'screenshot_%Y%m%d_%H%M%S.png' -e 'm
 bindsym F9 exec audio_toggle.sh
 
 # # Lock screen behaviour
-# bindsym $mod+shift+Pause exec --no-startup-id i3lock-fancy
+bindsym $mod+shift+Pause exec --no-startup-id i3lock-fancy
 
 set $Locker kbdlight && i3lock-fancy && sleep 1
 
