--- a/config/.config/i3/i3blocks.conf
+++ b/config/.config/i3/i3blocks.conf
@@ -43,7 +43,7 @@ signal=10
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=
+label=
 separator=false
 interval=30
 separator=true
