Use output from new computer and register a fallback

--- a/config/.config/grobi.conf
+++ b/config/.config/grobi.conf
@@ -13,39 +13,48 @@ rules:
 
   # This is a rule for the home setup (big screen beside)
   - name: Home
-    outputs_connected: [eDP1,DP2]
+    outputs_connected: [eDP-1,DP-1]
+    outputs_present: [HDMI-1]
     configure_row:
-        - eDP1@1920x1080
-        - DP2@3840x2160
+        - eDP-1@1920x1200
+        - DP-1@3840x2160
     atomic: true
-    primary: DP2
-    secondary: eDP1
+    primary: DP-1
+    secondary: eDP-1
 
-  # This is a rule for the office setup (external Lenovo monitor in front)
-  - name: Office
-    outputs_connected: [DP2, eDP1]
-    outputs_present: [DP2]
-    configure_column:
-        - DP2@2560x1440
-        - eDP1@1920x1080
-    atomic: true
-    primary: DP2
-    secondary: eDP1
+  # # This is a rule for the office setup (external Lenovo monitor in front)
+  # - name: Office
+  #   outputs_connected: [DP-2, eDP-1]
+  #   outputs_present: [DP-2]
+  #   configure_column:
+  #       - DP-2@2560x1440
+  #       - eDP-1@1920x1080
+  #   atomic: true
+  #   primary: DP-2
+  #   secondary: eDP-1
 
   # This is a rule for the laptop alone
   - name: Laptop
-    configure_single: eDP1
+    outputs_connected: [eDP-1]
+    configure_single: eDP-1
+    outputs_present: [HDMI-1]
     atomic: true
-    primary: eDP1
-    secondary: eDP1
+    primary: eDP-1
     
-  # This is a rule for an external TV presentation
-  - name: Presentation
-    outputs_connected: [eDP1, HDMI1]
-    outputs_present: [HDMI1]
-    configure_column:
-        - HDMI1@1920x1080
-        - eDP1@1920x1080
-    atomic: true
-    primary: eDP1
-    secondary: HDMI1
+  # # This is a rule for an external TV presentation
+  # - name: Presentation
+  #   outputs_connected: [eDP-1, HDMI1]
+  #   outputs_present: [HDMI1]
+  #   configure_column:
+  #       - HDMI1@1920x1080
+  #       - eDP-1@1920x1080
+  #   atomic: true
+  #   primary: eDP-1
+  #   secondary: HDMI1
+  #   Prevent screen from locking when presenting
+  #   execute_after:
+  #     - xautolock -disable 
+
+  # Safe is to apply this as a fallback
+  - name: Fallback
+    configure_single: eDP-1
