--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -193,7 +193,8 @@ bar {
     # Icons from Awesome Font https://fontawesome.com/icons?d=gallery
     # Debug bar 2>/tmp/i3blocks.err /usr/bin/i3blocks -vvv -c ~/.config/i3/i3blocks.conf | tee /tmp/i3blocks.out
 
-    font pango: DejaVu Sans Mono, Font Awesome 5 Free Solid 12 
+    font pango: DejaVu Sans Mono, Font Awesome 6 Free Solid 12
+    # font pango: DejaVu Sans Mono, Font Awesome Free 12
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     position top
     workspace_buttons yes   
