Don't start i3 sessions with 'home' screen layuout by default
Instead let grobi watch do its job

--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -279,7 +279,7 @@ exec_always --no-startup-id ibus-daemon -rxR
 exec_always --no-startup-id ~/.local/bin/fehbg
 
 # Setup screen
-exec --no-startup-id ~/.screenlayout/home.sh
+# exec --no-startup-id ~/.screenlayout/home.sh
 
 # Network manager tray
 exec --no-startup-id connman-gtk --tray
