Add grobi rule for office setup

--- a/config/.config/grobi.conf
+++ b/config/.config/grobi.conf
@@ -22,16 +22,16 @@ rules:
     primary: DP-1
     secondary: eDP-1
 
-  # # This is a rule for the office setup (external Lenovo monitor in front)
-  # - name: Office
-  #   outputs_connected: [DP-2, eDP-1]
-  #   outputs_present: [DP-2]
-  #   configure_column:
-  #       - DP-2@2560x1440
-  #       - eDP-1@1920x1080
-  #   atomic: true
-  #   primary: DP-2
-  #   secondary: eDP-1
+  # This is a rule for the office setup (external Lenovo monitor in front)
+  - name: Office
+    outputs_connected: [HDMI-1, eDP-1]
+    outputs_present: [HDMI-1]
+    configure_column:
+        - HDMI-1@1920x1200
+        - eDP-1@1920x1200
+    atomic: true
+    primary: HDM1-1
+    secondary: eDP-1
 
   # This is a rule for the laptop alone
   - name: Laptop
