--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -269,7 +269,7 @@ bindsym $mod+Delete mode "$mode_system"
 
 # Autolock (handled with xss-lock instead as it listens to systemd events)
 # exec --no-startup-id xautolock -locker i3lock-fancy -nowlocker i3lock-fancy -time 3 &
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock-fancy
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock-fancy
 
 # Keyboard shenanigans
 exec_always --no-startup-id ibus-daemon -rxR
