Set WantedBy target to systemd's screenlock.service correctly

--- a/config/.config/systemd/user/screenlock.service
+++ b/config/.config/systemd/user/screenlock.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=Lock the screen automatically after a timeout
-After=graphical.target
 
 [Service]
 Type=simple
 Environment=DISPLAY=:0
+Restart=no
 ExecStart=/usr/bin/xautolock -time 3 -locker /usr/bin/i3lock-fancy -detectsleep
 
 [Install]
-WantedBy=graphical.target
+WantedBy=default.target
