Rename all outputs as per xrandr (updated) output

--- a/config/.config/grobi.conf
+++ b/config/.config/grobi.conf
@@ -13,43 +13,40 @@ rules:
 
   # This is a rule for the home setup (big screen beside)
   - name: Home
-    outputs_connected: [eDP-1,DP-1]
-    outputs_present: [HDMI-1]
+    outputs_connected: [eDP1,DP1]
     configure_row:
-        - eDP-1@1920x1200
-        - DP-1@3840x2160
+        - eDP1@1920x1200
+        - DP1@3840x2160
     atomic: true
-    primary: DP-1
-    secondary: eDP-1
+    primary: DP1
+    secondary: eDP1
 
   # This is a rule for the office setup (external Lenovo monitor in front)
   - name: Office
-    outputs_connected: [HDMI-1, eDP-1]
-    outputs_present: [HDMI-1]
+    outputs_connected: [HDMI1, eDP1]
     configure_column:
-        - HDMI-1@1920x1200
-        - eDP-1@1920x1200
+        - HDMI1@1920x1200
+        - eDP1@1920x1200
     atomic: true
-    primary: HDM1-1
-    secondary: eDP-1
+    primary: HDMI1
+    secondary: eDP1
 
   # This is a rule for the laptop alone
   - name: Laptop
-    outputs_connected: [eDP-1]
-    configure_single: eDP-1
-    outputs_present: [HDMI-1]
+    outputs_connected: [eDP1]
+    configure_single: eDP1
     atomic: true
-    primary: eDP-1
+    primary: eDP1
     
   # # This is a rule for an external TV presentation
   # - name: Presentation
-  #   outputs_connected: [eDP-1, HDMI1]
+  #   outputs_connected: [eDP1, HDMI1]
   #   outputs_present: [HDMI1]
   #   configure_column:
   #       - HDMI1@1920x1080
-  #       - eDP-1@1920x1080
+  #       - eDP1@1920x1080
   #   atomic: true
-  #   primary: eDP-1
+  #   primary: eDP1
   #   secondary: HDMI1
   #   Prevent screen from locking when presenting
   #   execute_after:
