--- a/config/.config/systemd/user/screenlock.service
+++ b/config/.config/systemd/user/screenlock.service
@@ -3,9 +3,8 @@ Description=Lock the screen automatically after a timeout
 
 [Service]
 Type=simple
-Environment=DISPLAY=:0
 Restart=no
 ExecStart=/usr/bin/xautolock -time 3 -locker /usr/bin/i3lock-fancy -detectsleep
 
 [Install]
-WantedBy=default.target
+WantedBy=graphical.target
