Remove unnecessary dependency from dropbox.service unit

--- a/config/.config/systemd/user/dropbox.service
+++ b/config/.config/systemd/user/dropbox.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dropbox as a user service
-After=local-fs.target network.target
+After=network-online.target
 
 [Service]
 Type=simple
