--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -13,7 +13,8 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:InconsolataGo NF 12
+font pango:Inter 12
+# InconsolataGo NF 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
