--- a/config/.config/gxkb/gxkb.cfg
+++ b/config/.config/gxkb/gxkb.cfg
@@ -4,6 +4,6 @@ default_group=0
 never_modify_config=false
 model=pc105
 layouts=fi
-variants=
+variants=qwerty
 toggle_option=ctrl:nocaps, grp:alt_space_toggle
 compose_key_position=
