Take screenshots in Sway
Pass them to Swappy in order to edit if needed be. Save the screenshot under
pics folder in home.

--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -260,7 +260,12 @@ bindsym XF86MonBrightnessUp exec brightnessctl set 10%+
 #
 bindsym $mod+Ctrl+l exec kbdlighttoggle
 
-include /etc/sway/config.d/*
-
 # Notification Daemon
 exec swaync
+
+#
+# Screenshots
+#
+bindsym --release Print exec grim -g "$(slurp)" - | swappy -f -
+
+include /etc/sway/config.d/*
