--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -38,6 +38,7 @@ output * bg /home/manuel/pics/bg.jpg fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output eDP-1 resolution 1920x1200 position 0,0
+output DP-1 resolution 3840x2160 position 1920,0
 
 ### Input configuration
 #
