Separate work projects from hobby projects

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -2,8 +2,9 @@
 	name = Manuel González
 	email = manuel@manuel.is
 	signingKey = 0C72166F87541FE1
-        [includeIf "gitdir:~/workbench/"]
-                   path = ~/workbench/.gitconfig
+        gpgSign = true
+        [includeIf "gitdir:~/workbench/work"]
+                   path = ~/workbench/work/.gitconfig
 [push]
 	default = current
 [alias]
