--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -265,6 +265,11 @@ bindsym $mod+Ctrl+l exec kbdlighttoggle
 exec swaync
 
 #
+# Network Manager tray
+#
+exec GTK_USE_PORTAL=1 nm-applet --indicator
+
+#
 # Screenshots
 #
 bindsym --release Print exec grim -g "$(slurp)" - | swappy -f -
