Add blueman-applet to tray

--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -270,6 +270,11 @@ exec swaync
 exec GTK_USE_PORTAL=1 nm-applet --indicator
 
 #
+# Bluetooth tray
+#
+exec blueman-applet
+
+#
 # Screenshots
 #
 bindsym --release Print exec grim -g "$(slurp)" - | swappy -f -
