--- a/config/.config/systemd/user/mbsync.service
+++ b/config/.config/systemd/user/mbsync.service
@@ -4,7 +4,7 @@ Description=Mailbox synchronization service
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/mbsync -Va
-ExecStartPost=/usr/bin/emacsclient --socket-name=hademacs --eval '(mu4e-update-index)'
+ExecStartPost=/usr/bin/emacsclient --socket-name=hademacs --eval "(require 'mu4e) (mu4e-update-index)"
 
 [Install]
 WantedBy=default.target
