--- a/config/.config/systemd/user/swayidle.service
+++ b/config/.config/systemd/user/swayidle.service
@@ -1,18 +1,19 @@
 [Unit]
 Description=Idle manager for Wayland
 Documentation=man:swayidle(1)
+BindsTo=sway-session.target
 After=sway.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/swayidle -w -d
-Restart=always
-# wait 2 seconds before retrying instead of 100ms
-#
-# this will keep the service trying without tripping the
-# StartLimitBurst, while giving sway possibly time to properly
-# initialize
-RestartSec=2s
+ExecStart=/usr/bin/swayidle -w -d \
+                            timeout 120 'swaylock -f -i /home/manuel/Documents/pics/lock.jpg --scaling fill' \
+                            timeout 245 'swaymsg "output * power off"' \
+                            resume 'swaymsg "output * power on"' \
+                            timeout 300 ' systemctl suspend' \
+                            timeout 30 ' if pgrep swaylock; then swaymsg "output * power off"; fi' \
+                            resume 'if pgrep swaylock; then swaymsg "output * power on"' \
+                            before-sleep 'playerctl pause; swaylock -i /home/manuel/Documents/pics/lock.jpg --scaling fill'
 
 [Install]
 WantedBy=sway-session.target
