--- a/config/.config/systemd/user/gpg-agent.service
+++ b/config/.config/systemd/user/gpg-agent.service
@@ -4,8 +4,5 @@ Documentation=man:gpg-agent(1)
 Requires=gpg-agent.socket
 
 [Service]
-ExecStart=/usr/bin/gpg-agent --supervised --options %h/.gnupg/gpg-agent.conf
+ExecStart=/usr/bin/gpg-agent --supervised
 ExecReload=/usr/bin/gpgconf --reload gpg-agent
-
-[Install]
-WantedBy=default.target
