--- a/config/.config/swappy/config
+++ b/config/.config/swappy/config
@@ -1,5 +1,5 @@
 [Default]
-save_dir=$HOME/pics/screenshots
+save_dir=/home/manuel/Documents/pics/screenshots
 save_filename_format=screenshot_%Y%m%d_%H%M%S.png
 show_panel=false
 line_size=5
