Always start the sway-sesstion target

--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -277,3 +277,4 @@ exec blueman-applet
 #
 bindsym --release Print exec grim -g "$(slurp)" - | swappy -f -
 
+exec_always systemctl --user start sway-session.target
