--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -95,11 +95,9 @@ set $lock 'swaylock -f -i /home/manuel/pics/bg.jpg --scaling fill'
 bindsym $mod+Delete exec $lock
 bindsym Pause exec $lock
 
-exec swayidle -w timeout 90 'swaylock -f -i /home/manuel/pics/bg.jpg --scaling fill' timeout 245 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' before-sleep 'playerctl pause; swaylock -i /home/manuel/pics/bg.jpg --scaling fill'
-
 #
 # Suspend
-bindsym $mod+Home exec 'swaylock -i /home/manuel/pics/bg.jpg --scaling fill' & systemctl suspend
+bindsym $mod+Home exec systemctl suspend
 
 #
 # Moving Around:
