--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -31,7 +31,7 @@ include /etc/sway/config-vars.d/*
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /home/manuel/pics/bg.jpg fill
+output * bg /home/manuel/Documents/pics/bg.jpg fill
 #
 # Example configuration:
 #
@@ -90,8 +90,7 @@ bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. 
 
 #
 # Lock screen 
-set $lock 'swaylock -f -i /home/manuel/pics/bg.jpg --scaling fill'
-
+set $lock 'swaylock -f -i "/home/manuel/Documents/pics/lock.jpg" --scaling fill'
 bindsym $mod+Delete exec $lock
 bindsym Pause exec $lock
 
