Revert GPG-related changes to desired behavior
Use pinentry-gnome3 mainly and let gpg do the right thing

--- a/config/.config/systemd/user/gpg-agent.service
+++ b/config/.config/systemd/user/gpg-agent.service
@@ -3,7 +3,7 @@ Description=GnuPG cryptographic agent and passphrase cache
 Documentation=man:gpg-agent(1)
 
 [Service]
-ExecStart=/usr/bin/gpg-agent --supervised
+ExecStart=/usr/bin/gpg-agent --supervised --options %h/.gnupg/gpg-agent.conf
 ExecReload=/usr/bin/gpgconf --reload gpg-agent
 
 [Install]
