--- a/config/.config/systemd/user/swayidle.service
+++ b/config/.config/systemd/user/swayidle.service
@@ -7,13 +7,13 @@ After=sway.service
 [Service]
 Type=simple
 ExecStart=/usr/bin/swayidle -w -d \
-                            timeout 120 'swaylock -f -i /home/manuel/Documents/pics/lock.jpg --scaling fill' \
+                            timeout 120 'swaylock -f -C "/home/manuel/.config/swaylock/config"' \
                             timeout 245 'swaymsg "output * power off"' \
                             resume 'swaymsg "output * power on"' \
                             timeout 300 ' systemctl suspend' \
                             timeout 30 ' if pgrep swaylock; then swaymsg "output * power off"; fi' \
                             resume 'if pgrep swaylock; then swaymsg "output * power on"' \
-                            before-sleep 'playerctl pause; swaylock -i /home/manuel/Documents/pics/lock.jpg --scaling fill'
+                            before-sleep 'playerctl pause; swaylock -f -C "/home/manuel/.config/swaylock/config"'
 
 [Install]
 WantedBy=sway-session.target
