--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -17,7 +17,7 @@ set $term foot
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:Inter 12
+font pango:"InconsolataGo Nerd Font Mono" 10
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
