--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -1,40 +1,33 @@
-# Default config for sway
 #
-# Copy this to ~/.config/sway/config and edit it to your liking.
+# Main config
 #
 # Read `man 5 sway` for a complete reference.
-
-### Variables
-#
-# Logo key. Use Mod1 for Alt.
 set $mod Mod1
 set $left j
 set $down k
 set $up i
 set $right l
-# Your preferred terminal emulator
+# Preferred terminal emulator
 set $term foot
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:"InconsolataGo Nerd Font Mono" 10
 
-# Your preferred application launcher
-# Note: pass the final command to swaymsg so that the resulting window can be opened
+#
+# Application launcher
+#
+# Pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 set $menu fuzzel | xargs swaymsg exec --
 
 include /etc/sway/config-vars.d/*
 
-### Output configuration
+#
+# Outputs
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /home/manuel/Documents/pics/bg.jpg fill
-#
-# Example configuration:
-#
-#   
-#
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 output eDP-1 resolution 1920x1200 position 0,0
 output DP-1 resolution 3840x2160 position 1920,0
@@ -59,9 +52,8 @@ input * {
       xkb_options "grp:alt_space_toggle,ctrl:swapcaps"
 }
 
-### Key bindings
 #
-# Basics:
+# Key bindings
 #
 # Start a terminal
 bindsym $mod+Return exec $term
@@ -120,7 +112,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 #
-# Workspaces:
+# Workspaces
 #
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -193,7 +185,7 @@ bindsym $mod+minus scratchpad show
 
 
 #
-# resizing containers:
+# Resizing containers
 #
 mode "resize" {
     # left will shrink the containers width
@@ -218,6 +210,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+#
+# Colors
+#
 # class                 border  backgr. text    indicator child_border
 client.focused          #6272a4 #285577 #ffffff #2e9ef4   #6272a4 
 client.focused_inactive #282a36 #5f676a #ffffff #484e50   #282a36
@@ -259,6 +254,12 @@ bindsym --release Print exec grim -g "$(slurp)" - | swappy -f -
 set $logout wlogout -l "/home/manuel/.config/wlogout/layout" -C "/home/manuel/.config/wlogout/style.css" -s -n -b 2
 bindsym $mod+Escape exec $logout
 
+#
+# Other includes (see folder)
+#
 include /etc/sway/config.d/*
 
+#
+# Make sure to reach sway-session.target
+#
 exec_always systemctl --user start sway-session.target
