--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ gpg/.gnupg/*
 bin/.local/state/*
 bin/.local/share/*
 !bin/.local/share/applications
+config/.config/MusicBrainz/.Picard.ini.synclock
