--- a/config/.config/fuzzel/fuzzel.ini
+++ b/config/.config/fuzzel/fuzzel.ini
@@ -1,28 +1,37 @@
-font=Inter:size=14
-dpi-aware=no
+font=InconsolataGo:size=12
+dpi-aware=auto
 prompt="> "
 terminal=footclient
 launch-prefix=swaymsg exec --
-
-lines=20
+icon-theme=Adwaita
+icons-enabled=yes
+fields=filename,name,generic
+password-character=*
+fuzzy=yes
+show-actions=no
+lines=10
 width=30
-horizontal-pad=8
-vertical-pad=4
-inner-pad=4
+horizontal-pad=40
+vertical-pad=20
+inner-pad=10
 exit-on-keyboard-focus-loss=no
+image-size-ratio=0.5
+line-height=<use font metrics>
+letter-spacing=0
+layer = top
 
 [colors]
-background=303446dd
-text=c6d0f5ff
-match=e78284ff
-selection=626880ff
-selection-match=e78284ff
-selection-text=c6d0f5ff
-border=babbf1ff
+background=282a36dd
+text=f8f8f2ff
+match=8be9fdff
+selection-match=8be9fdff
+selection=44475add
+selection-text=f8f8f2ff
+border=bd93f9ff
 
 [border]
-width=3
-radius=0
+width=1
+radius=15
 
 [key-bindings]
 next=Mod1+j Down Control+n
