Put Telegram in the same workspace and floating

--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -111,6 +111,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+
 #
 # Workspaces
 #
@@ -149,6 +150,12 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 0
+
+#
+# Tweak certain windows
+#
+for_window [app_id="telegram"] floating enable
+assign [app_id="telegram"] workspace number 4
 
 #
 # Layout stuff:
