Style tweaks to fuzzel and sway windows

--- a/config/.config/fuzzel/fuzzel.ini
+++ b/config/.config/fuzzel/fuzzel.ini
@@ -13,12 +13,11 @@ lines=10
 width=30
 horizontal-pad=40
 vertical-pad=20
-inner-pad=10
+inner-pad=15
 exit-on-keyboard-focus-loss=no
-image-size-ratio=0.5
-line-height=<use font metrics>
+line-height=20
 letter-spacing=0
-layer = top
+layer=top
 
 [colors]
 background=282a36dd
@@ -27,11 +26,11 @@ match=8be9fdff
 selection-match=8be9fdff
 selection=44475add
 selection-text=f8f8f2ff
-border=bd93f9ff
+border=282a36dd
 
 [border]
 width=1
-radius=15
+radius=30
 
 [key-bindings]
 next=Mod1+j Down Control+n
