--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -221,7 +221,7 @@ bindsym $mod+r mode "resize"
 # Colors
 #
 # class                 border  backgr. text    indicator child_border
-client.focused          #6272a4 #285577 #ffffff #2e9ef4   #6272a4 
+client.focused          #285577 #285577 #ffffff #2e9ef4   #6272a4
 client.focused_inactive #282a36 #5f676a #ffffff #484e50   #282a36
 client.unfocused        #282a36 #222222 #888888 #292d2e   #282a36
 client.urgent           #282a36 #900000 #ffffff #900000   #282a36
