Add new GPG identity for work-related matters

--- a/git/workbench/work/.gitconfig
+++ b/git/workbench/work/.gitconfig
@@ -1,2 +1,5 @@
 [user]
-    name = Manuel González
+	name = Manuel Gonzalez
+	email = manuel@resq-club.com
+	signingKey = DDC110C2D788CE8C
+        gpgSign = true
