--- a/config/.config/fuzzel/fuzzel.ini
+++ b/config/.config/fuzzel/fuzzel.ini
@@ -7,7 +7,7 @@ icon-theme=Adwaita
 icons-enabled=yes
 fields=filename,name,generic
 password-character=*
-fuzzy=yes
+match-mode=fuzzy
 show-actions=no
 lines=10
 width=30
