--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -8,6 +8,7 @@ Type=forking
 ExecStart=/usr/bin/emacs --daemon=apolloemacs
 ExecStop=/usr/bin/emacsclient --eval "(progn (setq kill-emacs-hook 'nil) (kill-emacs))"
 Environment=COLORTERM=truecolor
+Environment=SSH_AUTH_SOCK=%t/ssh-agent.socket
 Environment=GPG_AGENT_INFO=%t/gnupg/S.gpg-agent
 Restart=on-failure
 
