--- a/config/.config/systemd/user/swayidle.service
+++ b/config/.config/systemd/user/swayidle.service
@@ -12,8 +12,8 @@ ExecStart=/usr/bin/swayidle -w -d \
                             resume 'swaymsg "output * power on"' \
                             timeout 300 ' systemctl suspend' \
                             timeout 30 ' if pgrep swaylock; then swaymsg "output * power off"; fi' \
-                            resume 'if pgrep swaylock; then swaymsg "output * power on"' \
-                            before-sleep 'playerctl pause; swaylock -f -C "/home/manuel/.config/swaylock/config"'
+                            resume ' if pgrep swaylock; then swaymsg "output * power on"; fi' \
+                            before-sleep ' playerctl pause; swaylock -f -C "/home/manuel/.config/swaylock/config"'
 
 [Install]
 WantedBy=sway-session.target
