Add office screen (presentation) profile to kanshi

--- a/config/.config/kanshi/config
+++ b/config/.config/kanshi/config
@@ -2,21 +2,22 @@ profile home {
 
 output 'Lenovo Group Limited LEN T32p-20 VNA41G9T' mode 3840x2160@60.0Hz position 1920,0 transform normal scale 1.0 adaptive_sync on
 output 'California Institute of Technology 0x1404 Unknown' mode 1920x1200@60.001Hz position 0,420 transform normal scale 1.0 adaptive_sync on
-
 }
 
 profile office {
 
 output 'Lenovo Group Limited LEN T27h-2L VNA920HL' mode  2560x1440@59.951Hz position 1136,0 transform normal scale 1.0 adaptive_sync on
-
 output 'California Institute of Technology 0x1404 Unknown' mode  1920x1200@60.001Hz position 1476,1440 transform normal scale 1.0 adaptive_sync on
-
 }
 
 profile office_2 {
 
 output 'Lenovo Group Limited LEN P27u-10 0x01010101' mode  2560x1440@59.951Hz position 1136,0 transform normal scale 1.0 adaptive_sync on
-
 output 'California Institute of Technology 0x1404 Unknown' mode  1920x1200@60.001Hz position 1476,1440 transform normal scale 1.0 adaptive_sync on
+}
 
+profile presentation {
+
+output 'Samsung Electric Company SyncMaster H1AK500000' mode  1920x1080@60.0Hz position 1136,0 transform normal scale 1.0 adaptive_sync on
+output 'California Institute of Technology 0x1404 Unknown' mode  1920x1200@60.001Hz position 1136,1080 transform normal scale 1.0 adaptive_sync on
 }
