--- a/config/.config/sway/config
+++ b/config/.config/sway/config
@@ -119,16 +119,6 @@ bindsym $mod+Shift+Right move right
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 # switch to workspace
-workspace 1 output DP-1
-workspace 2 output DP-1
-workspace 3 output DP-1
-workspace 4 output DP-1
-workspace 5 output DP-1
-workspace 6 output DP-1
-workspace 7 output DP-1
-workspace 8 output DP-1
-workspace 9 output eDP-1
-workspace 0 output eDP-1
 
 bindsym $mod+1 workspace 1
 bindsym $mod+2 workspace 2
@@ -140,6 +130,7 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 0
+
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -152,13 +143,27 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 0
 
+# Attach workspaces to outputs
+workspace 1 output DP-1 DP-2
+workspace 2 output DP-1 DP-2
+workspace 3 output DP-1 DP-2
+workspace 4 output eDP-1
+workspace 5 output DP-1 DP-2
+workspace 6 output DP-1 DP-2
+workspace 7 output DP-1 DP-2
+workspace 8 output DP-1 DP-2
+workspace 9 output eDP-1
+workspace 0 output eDP-1
+
 #
 # Tweak certain windows
 #
-# for_window [app_id="telegram"] floating enable
-# assign [app_id="telegram"] workspace number 4
+
 for_window [app_id="tauon"] floating enable
 assign [app_id="tauon"] workspace number 9
+assign [app_id="telegram"] workspace number 4
+assign [app_id="slack"] workspace number 4
+
 
 #
 # Layout stuff:
