Set forge merge and branch configs for git as well as autoSetupRemote

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -7,6 +7,7 @@
                    path = ~/workbench/work/.gitconfig
 [push]
 	default = current
+	autoSetupRemote = true
 [alias]
 	commend = commit --amend --no-edit
 	grog = log --graph --abbrev-commit --decorate --all --format=format:\"%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(dim white) - %an%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset)\"
@@ -31,3 +32,9 @@
 	autocrlf = input
 [gpg]
 	program = gpg
+[forge]
+	remote = origin
+[merge]
+	conflictstyle = diff3
+[branch]
+	autosetupmerge = true
