--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -7,6 +7,7 @@ After=gpg-agent.service
 Type=forking
 ExecStart=/usr/bin/emacs --daemon=apolloemacs
 ExecStop=/usr/bin/emacsclient --eval "(progn (setq kill-emacs-hook 'nil) (kill-emacs))"
+Environment=NVM_DIR=%h/.nvm
 Environment=COLORTERM=truecolor
 Environment=SSH_AUTH_SOCK=%t/ssh-agent.socket
 Environment=GPG_AGENT_INFO=%t/gnupg/S.gpg-agent
