Ignore sway workspaces file as it is not used

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ bin/.local/state/*
 bin/.local/share/*
 !bin/.local/share/applications
 config/.config/MusicBrainz/.Picard.ini.synclock
+config/.config/sway/workspaces
