--- a/config/.config/swaync/config.json
+++ b/config/.config/swaync/config.json
@@ -9,7 +9,7 @@
   "notification-icon-size": 64,
   "notification-body-image-height": 100,
   "notification-body-image-width": 200,
-  "timeout": 10,
+  "timeout": 4,
   "timeout-low": 5,
   "timeout-critical": 0,
   "fit-to-screen": false,
@@ -55,7 +55,7 @@
     },
     "label": {
       "max-lines": 1,
-      "text": "Controll Center"
+      "text": "Control Center"
     },
     "mpris": {
       "image-size": 96,
