--- a/config/.config/waybar/config
+++ b/config/.config/waybar/config
@@ -1,10 +1,8 @@
 {
-    "layer": "top", // Waybar at top layer
-    "position": "top", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height
+    "layer": "top",
+    "position": "top",
+    "height": 30,
     "margin": "5 10 5 10",
-    // "width": 120, // Waybar width
-    // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/language"],
     "modules-right": ["cpu","temperature", "memory", "pulseaudio#input", "pulseaudio#output", "battery", "power-profiles-daemon", "network", "clock", "tray"],
     "mode": {
@@ -12,7 +10,6 @@
 	    "output": ["eDP-1","DP-1"],
  	}
     },
-    // Modules configuration
      "sway/workspaces": {
          "disable-scroll": true,
          "disable-markup" : false,
@@ -48,7 +45,7 @@
     },
     "clock#date": {
       "interval": 10,
-      "format": "  {:%e %b %Y}", // Icon: calendar-alt
+      "format": "  {:%e %b %Y}",
       "tooltip-format": "{:%e %B %Y}",
     },
     "cpu": {
@@ -76,7 +73,7 @@
             "critical": 15
         },
         "format": "{icon}   {capacity}%",
-        // "format-good": "", // An empty format will hide the module
+        // "format-good": "",
         // "format-full": "",
         "format-icons": [
             "<span color=\"#ff5555\"></span>",
