--- a/desktop/.local/share/applications/em.desktop
+++ b/desktop/.local/share/applications/em.desktop
@@ -1,15 +1,13 @@
 [Desktop Entry]
-Version=1.0
 Name=Emacs
 GenericName=Text Editor
-Comment=GNU Emacs is an extensible, customizable text editor - and more
-MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;
-TryExec=/usr/local/bin/emacsclient
-Exec=/usr/local/bin/emacsclient -r --socket-name=apolloemacs %F
+Comment=Edit text
+MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text>
 Icon=emacs
 Type=Application
 Terminal=false
-Categories=Utility;Development;TextEditor;
+Categories=Development;TextEditor;
 StartupNotify=true
 StartupWMClass=Emacs
-Keywords=Text;Editor;
+Keywords=emacsclient;Text;Editor
+Exec=/usr/local/bin/emacsclient -r --socket-name=apolloemacs %F
